--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
     		<li>9 <input type='radio' id='choice9' name='elementLayer' class='layerCheck'><span id='choiceName9'></span></li>
     	</ul>
     </div>
-    <div id='checks'></div>
-    <div id='fill'></div>
-    <div id='line'></div>
+    <div id='style'>
+    	<div id='styleBox'></div>
+    </div>
     <button id='undoButton' class='iconButton'></button>
     <div id='layerDialog' class='dialog'>
     	<b>LAYERS</b>
