--- a/index.html
+++ b/index.html
@@ -147,10 +147,10 @@
         <button id='joinButton' class='iconButton'></button>
     </div>
     <div id='info'>
-    	<span id='type'></span>&nbsp;
-        <input id='first' type='number'/><span id='between'>x</span>
-        <input id='second' type='number'/><span id='after'>mm</span>
-        <input id='spin' type='number'/>&deg;
+    	<span id='type' class='info'></span>&nbsp;
+        <input id='first' type='number'/><span id='between' class='info'>x</span>
+        <input id='second' type='number'/><span id='after' class='info'>mm</span>
+        <input id='spin' type='number'/><span class='info'>&deg;</span>
         <button id='editButton' onclick='editText();'>EDIT</button>
         <div id='hint'></div>
     </div>
