--- a/index.html
+++ b/index.html
@@ -171,7 +171,6 @@
     <div id='style'>
     	<div id='styleBox'></div>
     </div>
-    <button id='undoButton' class='iconButton'></button>
     <div id='layerDialog' class='dialog'>
     	<b>LAYERS</b>
     	<ul id='layerList'>
@@ -384,7 +383,7 @@
         </p>
     </div>
     <div id='textDialog' class='dialog'>
-        <p><button id='textOKbutton'>TEXT</button></p>
+        <button id='textOKbutton'>TEXT</button><br>
         <textarea id='text' rows='5' cols='100'></textarea>
     </div>
     <div id='patternMenu' class='dialog'></div>
