--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         <button id='textButton' class='iconButton'></button>
         <button id='dimButton' class='iconButton'></button>
         <button id='setButton' class='iconButton'></button>
+        <button class='menuButton' onclick='showMore()'></button>
     </div>
     <div id='editTools'>
     	<button id='layerButton' class='iconButton'><span id='graphLayer'>0</span></button>
@@ -145,6 +146,7 @@
         <button id='repeatButton' class='iconButton'></button>
         <button id='filletButton' class='iconButton'></button>
         <button id='joinButton' class='iconButton'></button>
+        <button class='menuButton' onclick='showMore()'></button>
     </div>
     <div id='info'>
     	<span id='type' class='info'></span>&nbsp;
