--- a/help/help.html
+++ b/help/help.html
@@ -37,7 +37,7 @@ PWAs can be run online like any web app but can also be installed on your device
 <p>While drawing or editing elements you will often have <a href='#info'>information</a> at the top of the screen, and sometimes you will interact with 
 <a href='#dialogs'>dialog boxes</a> which appear at the top left corner.<br>
 At the top-right corner is the <i>more</i> button for other options. <img src='../svg/more.svg'></p>
-<p>The sequence is <a href='#draw'>draw</a>, <a href='#select'>select</a>, <a href='#edit'>edit</a> and <a href='#files'>save</a>.</p>
+<p>The sequence is <a href='#draw'>draw</a>, <a href='#select'>select</a>, <a href='#edit'>edit</a> and <a href='#documents'>save</a>.</p>
 <p><img src='screen.png' class='border'></p>
 <h2 id='draw'>Draw</h2>
 <p>Drawing is slightly different for the various drawing tools but usually involves tapping or dragging to position and size a drawing element. You use a mouse or a touch screen. 
