--- a/help/help.html
+++ b/help/help.html
@@ -213,7 +213,7 @@ Whatever your discipline, if you are drafting there will be sets you can create.
 representing walls, doors and windows, stairs, etc - drawn to scale, but may also have a title panel where the drawing number, title and scale are shown 
 and a north point indicating the orientation of the plan.<br>
 These <i>graphic elements</i> should appear the same size on any drawing, regardless of scale, and Draft has an easy way to achieve this...<br>
-If you use the <i>join</i> tool to define a set in a drawing at 1:1 scale (full-size), the set will be classed as a graphic. 
+If you use the <i>join</i> tool to define a set in a drawing at 1:1 scale (full-size), the set will be classed as a graphic (identified by the prefix @). 
 You might, for instance, use a 25mm diameter circle with an 'N' to make a north point. If you then add this to a 1:50 scale plan, 
 the circle will still be 25mm diameter on the drawing whereas if it were a normal set it would be drawn to scale as a 0.5mm dot! 
 It is useful to have a sets file defining a number of graphic sets.</p>
